--- a/app/src/main/res/layout/fragment_insufflator.xml
+++ b/app/src/main/res/layout/fragment_insufflator.xml
@@ -78,7 +78,7 @@
             android:layout_height="0dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/clTryk"
+            app:layout_constraintEnd_toStartOf="@+id/insufflator_linie1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -130,6 +130,95 @@
 
 
         </android.support.constraint.ConstraintLayout>
+
+        <View
+            android:id="@+id/insufflator_linie1"
+            android:layout_width="2dp"
+            android:layout_height="0dp"
+            android:background="#3366cc"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/clTryk"
+            app:layout_constraintStart_toEndOf="@id/clGasforsyning"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/clTryk"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/clFlowrate"
+            app:layout_constraintStart_toEndOf="@+id/insufflator_linie1"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/trykTitel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:maxLines="1"
+                android:text="@string/trykTitel"
+                android:textSize="30sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/trykDisplay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@color/colorDisplayBackground"
+                android:paddingStart="@dimen/displayPadding"
+                android:paddingEnd="@dimen/displayPadding"
+                android:text="00"
+                android:textColor="@color/colorDisplayRed"
+                android:textSize="100dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/trykTitel" />
+
+            <gruppe98.dtu.dk.gr098_simulatortilkirurgisktraening.views.MeterView
+                android:id="@+id/trykMeter"
+                android:layout_width="32dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/trykMaalDisplay"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/trykDisplay" />
+
+
+            <TextView
+                android:id="@+id/trykMaalDisplay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:background="@color/colorDisplayBackground"
+                android:paddingStart="@dimen/displayPadding"
+                android:paddingEnd="@dimen/displayPadding"
+                android:text="00"
+                android:textColor="@color/colorDisplayGreen"
+                android:textSize="100dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </android.support.constraint.ConstraintLayout>
+
+        <View
+            android:id="@+id/insufflator_linie2"
+            android:layout_width="2dp"
+            android:layout_height="0dp"
+            android:background="#3366cc"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/clFlowrate"
+            app:layout_constraintStart_toEndOf="@id/clTryk"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/clFlowrate"
@@ -197,72 +286,16 @@
 
         </android.support.constraint.ConstraintLayout>
 
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/clTryk"
-            android:layout_width="0dp"
+        <View
+            android:id="@+id/insufflator_linie3"
+            android:layout_width="2dp"
             android:layout_height="0dp"
+            android:background="#3366cc"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/clFlowrate"
-            app:layout_constraintStart_toEndOf="@+id/clGasforsyning"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:id="@+id/trykTitel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:maxLines="1"
-                android:text="@string/trykTitel"
-                android:textSize="30sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/trykDisplay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="@color/colorDisplayBackground"
-                android:paddingStart="@dimen/displayPadding"
-                android:paddingEnd="@dimen/displayPadding"
-                android:text="00"
-                android:textColor="@color/colorDisplayRed"
-                android:textSize="100dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/trykTitel" />
-
-            <gruppe98.dtu.dk.gr098_simulatortilkirurgisktraening.views.MeterView
-                android:id="@+id/trykMeter"
-                android:layout_width="32dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/trykMaalDisplay"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/trykDisplay" />
-
-
-            <TextView
-                android:id="@+id/trykMaalDisplay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:background="@color/colorDisplayBackground"
-                android:paddingStart="@dimen/displayPadding"
-                android:paddingEnd="@dimen/displayPadding"
-                android:text="00"
-                android:textColor="@color/colorDisplayGreen"
-                android:textSize="100dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-        </android.support.constraint.ConstraintLayout>
+            app:layout_constraintEnd_toStartOf="@id/clFlowrate"
+            app:layout_constraintStart_toEndOf="@id/clVolumen"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/clVolumen"
