--- a/app/src/main/res/drawable/baggrund.xml
+++ b/app/src/main/res/drawable/baggrund.xml
@@ -4,7 +4,7 @@
 
     <gradient
         android:angle="90"
-        android:startColor="#3366cc"
+        android:startColor="#bbccdd"
         android:endColor="#fff"/>
 
 
